@@ -13,6 +13,8 @@ import org.xmlcrm.app.data.user.Salutationmanagement;
 import org.xmlcrm.app.data.user.Organisationmanagement;
 import org.xmlcrm.app.hibernate.beans.user.Users;
 
+import org.red5.io.utils.ObjectMap;
+
 /**
  * 
  * @author swagner
@@ -41,8 +43,8 @@ public class UserService {
 	 */
 	public Users getUserById(String SID, long user_id){
         Long users_id = Sessionmanagement.getInstance().checkSession(SID);
-        long USER_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
-        return Usermanagement.getInstance().checkAdmingetUserById(USER_LEVEL,user_id);
+        long user_level = Usermanagement.getInstance().getUserLevelByID(users_id);
+        return Usermanagement.getInstance().checkAdmingetUserById(user_level,user_id);
 	}
 	
 	/**
@@ -72,53 +74,6 @@ public class UserService {
     }    
     
     /**
-     * 
-     * @param SID
-     * @param DATA_KEY
-     * @param DATA
-     * @param Comment
-     * @return
-     */
-    public Users addUserdata(String SID,String DATA_KEY,String DATA,String Comment){
-        Long users_id = Sessionmanagement.getInstance().checkSession(SID);
-        long User_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
-        Users users = new Users();
-        String ret = "Add Userdata Self";
-        if(User_LEVEL>1){
-            ret = Usermanagement.getInstance().addUserdata(users_id,DATA_KEY,DATA,Comment);
-            if (ret.equals("success")){
-                users = Usermanagement.getInstance().getUser(new Long(users_id));
-            } else {
-                users.setFirstname(ret);
-            }
-        } else {
-            ret = "Nur als registrierter Benutzer kann man seinen Account lšschen";
-            users.setFirstname(ret);
-        }
-        return users;
-    }    
-    
-    /**
-     * update user userdata self
-     * @param SID
-     * @param DATA_ID
-     * @param DATA_KEY
-     * @param DATA
-     * @param Comment
-     * @return
-     */
-    public Users updateUserdata(String SID, int DATA_ID, String DATA_KEY, String DATA, String Comment){
-        Long users_id = Sessionmanagement.getInstance().checkSession(SID);
-        long User_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
-        if(User_LEVEL>1){
-            Usermanagement.getInstance().updateUserdata(DATA_ID,users_id,DATA_KEY,DATA,Comment);
-            return Usermanagement.getInstance().getUser(new Long(users_id));
-        } else {
-            return null;
-        }
-    }	
-    
-    /**
      * get a list of all users of an organisation
      * @param SID
      * @param organisation_id
@@ -130,14 +85,14 @@ public class UserService {
      */
     public List getOrgUserList(String SID, long organisation_id, int start, int max, String orderby, boolean asc){
         Long users_id = Sessionmanagement.getInstance().checkSession(SID);
-        long USER_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
-        return Organisationmanagement.getInstance().getUsersByOrganisationId(USER_LEVEL, organisation_id, start, max, orderby, asc);
+        long user_level = Usermanagement.getInstance().getUserLevelByID(users_id);
+        return Organisationmanagement.getInstance().getUsersByOrganisationId(user_level, organisation_id, start, max, orderby, asc);
     }
     
     public List getUserListByModForm(String SID){
         Long users_id = Sessionmanagement.getInstance().checkSession(SID);
-        long USER_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
-        return Usermanagement.getInstance().getUserByMod(USER_LEVEL, users_id);
+        long user_level = Usermanagement.getInstance().getUserLevelByID(users_id);
+        return Usermanagement.getInstance().getUserByMod(user_level, users_id);
     }
     
     /**
@@ -152,8 +107,8 @@ public class UserService {
      */
     public List getOrganisationListByUser(String SID, long client_user, int start, int max, String orderby, boolean asc){
         Long users_id = Sessionmanagement.getInstance().checkSession(SID);
-        long USER_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
-        return Organisationmanagement.getInstance().getOrganisationsByUserId(USER_LEVEL, client_user, start, max, orderby, asc);
+        long user_level = Usermanagement.getInstance().getUserLevelByID(users_id);
+        return Organisationmanagement.getInstance().getOrganisationsByUserId(user_level, client_user, start, max, orderby, asc);
     }    
     
     /**
@@ -168,8 +123,8 @@ public class UserService {
      */
     public List getRestOrganisationListByUser(String SID, long client_user, int start, int max, String orderby, boolean asc){
         Long users_id = Sessionmanagement.getInstance().checkSession(SID);
-        long USER_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
-        return Organisationmanagement.getInstance().getRestOrganisationsByUserId(USER_LEVEL, client_user, start, max, orderby, asc);
+        long user_level = Usermanagement.getInstance().getUserLevelByID(users_id);
+        return Organisationmanagement.getInstance().getRestOrganisationsByUserId(user_level, client_user, start, max, orderby, asc);
     }
     
     
@@ -183,8 +138,8 @@ public class UserService {
      */
     public SearchResult getUserList(String SID, int start, int max, String orderby, boolean asc){
         Long users_id = Sessionmanagement.getInstance().checkSession(SID);
-        long USER_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
-        return Usermanagement.getInstance().getUsersList(USER_LEVEL, start, max, orderby, asc);
+        long user_level = Usermanagement.getInstance().getUserLevelByID(users_id);
+        return Usermanagement.getInstance().getUsersList(user_level, start, max, orderby, asc);
     }
     
     /**
@@ -193,25 +148,26 @@ public class UserService {
      * @param argObject
      * @return user_id or NULL or negativ value (error_id)
      */
-    public Long updateUserSelfSmall(String SID, Object argObject){
+    public Long updateUserSelfSmall(String SID, ObjectMap values ){
     	try {
 	        Long users_id = Sessionmanagement.getInstance().checkSession(SID);
-	        long User_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
-	        if(User_LEVEL>1){
-	        	LinkedHashMap argObjectMap = (LinkedHashMap) argObject;
-	            return Usermanagement.getInstance().updateUser(3,new Long(users_id), new Long(0), 
-	            		argObjectMap.get("login").toString(), argObjectMap.get("password").toString(), 
-	            		argObjectMap.get("lastname").toString(), argObjectMap.get("firstname").toString(), 
-	            		new Date(), argObjectMap.get("street").toString(), 
-	            		argObjectMap.get("additionalname").toString(),
-	            		argObjectMap.get("zip").toString(), Long.valueOf(argObjectMap.get("states_id").toString()).longValue(), 
-	            		argObjectMap.get("town").toString(), 1,
-	            		argObjectMap.get("telefon").toString(),argObjectMap.get("fax").toString(),
-	            		argObjectMap.get("mobil").toString(),argObjectMap.get("email").toString(),
-	            		argObjectMap.get("comment").toString(),
-	            		Integer.valueOf(argObjectMap.get("status").toString()).intValue(),
-	            		null,
-	            		Integer.valueOf(argObjectMap.get("title_id").toString()).intValue());
+	        Long User_LEVEL = Usermanagement.getInstance().getUserLevelByID(users_id);
+	        if(User_LEVEL!=null && User_LEVEL>1){
+	        	log.error(values.getClass().getName());
+//	            return Usermanagement.getInstance().updateUser(3,new Long(users_id), new Long(0), 
+//	            		argObjectMap.get("login").toString(), argObjectMap.get("password").toString(), 
+//	            		argObjectMap.get("lastname").toString(), argObjectMap.get("firstname").toString(), 
+//	            		new Date(), argObjectMap.get("street").toString(), 
+//	            		argObjectMap.get("additionalname").toString(),
+//	            		argObjectMap.get("zip").toString(), Long.valueOf(argObjectMap.get("states_id").toString()).longValue(), 
+//	            		argObjectMap.get("town").toString(), 1,
+//	            		argObjectMap.get("telefon").toString(),argObjectMap.get("fax").toString(),
+//	            		argObjectMap.get("mobil").toString(),argObjectMap.get("email").toString(),
+//	            		argObjectMap.get("comment").toString(),
+//	            		Integer.valueOf(argObjectMap.get("status").toString()).intValue(),
+//	            		null,
+//	            		Integer.valueOf(argObjectMap.get("title_id").toString()).intValue());
+	        	return Usermanagement.getInstance().saveOrUpdateUser(new Long(3),values, users_id);
 	        } else {
 	            return new Long(-2);
 	        }
